<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/button_background"
    android:id="@+id/list_item">

    <ImageView
        android:layout_width="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_android"
        android:id="@+id/image_view"
        android:contentDescription="@string/image_description"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/image_view"
        android:id="@+id/linear"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_text"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/num"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/num"
                android:src="@drawable/ic_star"
                android:contentDescription="@string/star_image_description"
                android:layout_marginStart="8dp"
                android:id="@+id/stars"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/link"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:text="@string/link"/>

    </LinearLayout>

</RelativeLayout>